woah! not only is this not working but also isn't what this branch was intended for. well, almost

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 .env/.env
-memory/
+
+
+# Ignore my files but keep examples
+memory/*
+
+!memory/default_system_prompts/
+!memory/prompts/readme.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
